# Vindskrivare

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
src/: avg.rs  config.rs  hass.rs  main.rs  mqtt.rs  net.rs  sen55.rs  ui.rs
ui/: Vindskrivare.sketch
ui/raw/: connecting-dhcp.rgb565  connecting-mqtt.rgb565  connecting-ready.rgb565  connecting-sen55.rgb565  connecting-wifi.rgb565  readings-dangerous-blank-l.rgb565  readings-dangerous-blank-r.rgb565  readings-dangerous.rgb565  readings-default-blank-l.rgb565  readings-default-blank-r.rgb565  readings-default.rgb565  readings-unhappy-blank-l.rgb565  readings-unhappy-blank-r.rgb565  readings-unhappy.rgb565  startup.rgb565
